--- a/client/app/sass/elyoos/contact/detail/_userPinwall.scss
+++ b/client/app/sass/elyoos/contact/detail/_userPinwall.scss
@@ -13,6 +13,7 @@
   .pinwall-container {
     height: 100%;
     padding: 0 8px;
+    overflow-x: hidden;
     overflow-y: auto;
     .pinwall-inner-container {
       max-width: 400px;
